--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <html>
+  <head>
+     <link rel="preconnect" href="https://fonts.gstatic.com">
+     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@700&display=swap" rel="stylesheet">
+    <style>
+      h1 {
+      font-family: "Source Sans Pro";
+      }
+    </style>
+  </head
 <body>
 <h1>We still do not have the link to the zoom meeting. Please check back later.</h1>
 </body>
