--- a/zoom.html
+++ b/zoom.html
@@ -9,6 +9,8 @@
     </style>
   </head
 <body>
-<h1>We still do not have the link to the zoom meeting. Please check back later.</h1>
+<h1>This is the link:</br>
+    <a href="https://us02web.zoom.us/j/81216088512?pwd=SDQwbmp3OE50M0UyakhzT1BlZEZxUT09">Click to join</a>
+</h1>
 </body>
 </html>
